--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -187,59 +187,33 @@
         <select data-placeholder="Select primary causes" id="primary_cause" name="primary_causes[]" class="chosen">
           <option value="">Any</option>
           
-            <option value="Assault">Assault</option>
-          
-            <option value="Battery">Battery</option>
-          
-            <option value="Conspiracy">Conspiracy</option>
-          
-            <option value="Deliberate indifference">Deliberate indifference</option>
-          
-            <option value="Due process violation">Due process violation</option>
-          
-            <option value="Equal protection violation">Equal protection violation</option>
+            <option value="DUI stop">DUI stop</option>
           
             <option value="Excessive force">Excessive force</option>
           
-            <option value="Failure to intervene">Failure to intervene</option>
+            <option value="Excessive force-minor">Excessive force-minor</option>
+          
+            <option value="Excessive force-serious">Excessive force-serious</option>
+          
+            <option value="Extended detention">Extended detention</option>
           
             <option value="Failure to provide medical care">Failure to provide medical care</option>
           
             <option value="False arrest">False arrest</option>
           
-            <option value="False imprisonment">False imprisonment</option>
-          
             <option value="First Amendment violation">First Amendment violation</option>
           
-            <option value="Illegal/unreasonable search">Illegal/unreasonable search</option>
+            <option value="Illegal search/seizure">Illegal search/seizure</option>
           
-            <option value="Illegal/unreasonable seizure">Illegal/unreasonable seizure</option>
-          
-            <option value="Illinois Domestic Violence Act">Illinois Domestic Violence Act</option>
-          
-            <option value="Intentional infliction of emotional distress">Intentional infliction of emotional distress</option>
-          
-            <option value="Intrusion/invasion of privacy">Intrusion/invasion of privacy</option>
+            <option value="Illinois Domestic Violence Act violation">Illinois Domestic Violence Act violation</option>
           
             <option value="Malicious prosecution">Malicious prosecution</option>
           
-            <option value="Negligence">Negligence</option>
+            <option value="Monell (policies and practices)">Monell (policies and practices)</option>
           
-            <option value="Other civil rights violations">Other civil rights violations</option>
+            <option value="Other police misconduct">Other police misconduct</option>
           
-            <option value="Policies and practices">Policies and practices</option>
-          
-            <option value="Reckless conduct">Reckless conduct</option>
-          
-            <option value="Survival action">Survival action</option>
-          
-            <option value="Trespass">Trespass</option>
-          
-            <option value="Unlawful detention">Unlawful detention</option>
-          
-            <option value="Willful and wanton misconduct">Willful and wanton misconduct</option>
-          
-            <option value="Wrongful death">Wrongful death</option>
+            <option value="Reversed conviction">Reversed conviction</option>
           
         </select>
       </div>
