--- a/templates/case.html
+++ b/templates/case.html
@@ -68,7 +68,7 @@
 
 		      {% for victim in case.victims %}
 		        {% if (victim.victim_2) %}
-		          <span class="card-label">Additional victims: </span>
+		          <span class="card-label">Additional plaintiffs: </span>
 		          <ul class="case-details">
 		              {% for victim in case.victims %}
 		                {% if (victim.victim_2) %}
