--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1599,10 +1599,11 @@ Intro Page
 }
 #cpd-scrolling .inner-block {
   min-width: 100%;
+  max-width: 968px;
   position: absolute;
   text-align: center;
   margin-top: -60px;
-  padding: 0 18%;
+  padding: 0 20%;
   top: 50%;
   transform: translateY(-50%);
 }
