--- a/less/style.less
+++ b/less/style.less
@@ -1822,10 +1822,11 @@ Intro Page
 
   .inner-block {
     min-width:100%;
+    max-width:968px;
     position:absolute;
     text-align:center;
     margin-top: -60px;
-    padding:0 18%;
+    padding:0 20%;
     top:50%;
     transform:translateY(-50%);
   }
