--- a/templates/_base.html
+++ b/templates/_base.html
@@ -33,5 +33,5 @@
   <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='vendor/backbone/backbone.js') }}"></script>
 {% endif %}
 
-<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endblock library_scripts %}
