--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -7,6 +7,192 @@
           <option value="">Any</option>
           <option value="unknown">Unknown</option>
           
+            <option value="Albany Park">Albany Park</option>
+          
+            <option value="Archer Heights">Archer Heights</option>
+          
+            <option value="Back of the Yards">Back of the Yards</option>
+          
+            <option value="Belmont Central">Belmont Central</option>
+          
+            <option value="Belmont Gardens">Belmont Gardens</option>
+          
+            <option value="Belmont Heights">Belmont Heights</option>
+          
+            <option value="Brainerd">Brainerd</option>
+          
+            <option value="Bridgeport">Bridgeport</option>
+          
+            <option value="Brighton Park">Brighton Park</option>
+          
+            <option value="Bronzeville">Bronzeville</option>
+          
+            <option value="Bucktown">Bucktown</option>
+          
+            <option value="Buena Park">Buena Park</option>
+          
+            <option value="Calumet Heights">Calumet Heights</option>
+          
+            <option value="Chatham">Chatham</option>
+          
+            <option value="Chicago Lawn">Chicago Lawn</option>
+          
+            <option value="Clearing (W)">Clearing (W)</option>
+          
+            <option value="Cragin">Cragin</option>
+          
+            <option value="East Chatham">East Chatham</option>
+          
+            <option value="East Garfield Park">East Garfield Park</option>
+          
+            <option value="East Side">East Side</option>
+          
+            <option value="Edgewater">Edgewater</option>
+          
+            <option value="Englewood">Englewood</option>
+          
+            <option value="Fernwood">Fernwood</option>
+          
+            <option value="Ford City">Ford City</option>
+          
+            <option value="Gage Park">Gage Park</option>
+          
+            <option value="Galewood">Galewood</option>
+          
+            <option value="Garfield Ridge">Garfield Ridge</option>
+          
+            <option value="Gold Coast">Gold Coast</option>
+          
+            <option value="Goose Island">Goose Island</option>
+          
+            <option value="Grand Crossing">Grand Crossing</option>
+          
+            <option value="Gresham">Gresham</option>
+          
+            <option value="Hanson Park">Hanson Park</option>
+          
+            <option value="Heart of Chicago">Heart of Chicago</option>
+          
+            <option value="Hegewisch">Hegewisch</option>
+          
+            <option value="Hermosa">Hermosa</option>
+          
+            <option value="Humboldt Park">Humboldt Park</option>
+          
+            <option value="Ida B. Wells / Darrow Homes">Ida B. Wells / Darrow Homes</option>
+          
+            <option value="Jefferson Park">Jefferson Park</option>
+          
+            <option value="Jeffery Manor">Jeffery Manor</option>
+          
+            <option value="Kelvin Park">Kelvin Park</option>
+          
+            <option value="Lake View">Lake View</option>
+          
+            <option value="Lake View East">Lake View East</option>
+          
+            <option value="Lawndale">Lawndale</option>
+          
+            <option value="LeClaire Courts">LeClaire Courts</option>
+          
+            <option value="Little Village">Little Village</option>
+          
+            <option value="Logan Square">Logan Square</option>
+          
+            <option value="Longwood Manor">Longwood Manor</option>
+          
+            <option value="Marquette Park">Marquette Park</option>
+          
+            <option value="Marynook">Marynook</option>
+          
+            <option value="McKinley Park">McKinley Park</option>
+          
+            <option value="Morgan Park">Morgan Park</option>
+          
+            <option value="Mount Greenwood">Mount Greenwood</option>
+          
+            <option value="Near West Side">Near West Side</option>
+          
+            <option value="Noble Square">Noble Square</option>
+          
+            <option value="North Austin">North Austin</option>
+          
+            <option value="Norwood Park East">Norwood Park East</option>
+          
+            <option value="Norwood Park West">Norwood Park West</option>
+          
+            <option value="O'Hare">O'Hare</option>
+          
+            <option value="Old Irving Park">Old Irving Park</option>
+          
+            <option value="Old Norwood Park">Old Norwood Park</option>
+          
+            <option value="Old Town Triangle">Old Town Triangle</option>
+          
+            <option value="Palmer Square">Palmer Square</option>
+          
+            <option value="Park Manor">Park Manor</option>
+          
+            <option value="Portage Park">Portage Park</option>
+          
+            <option value="Prairie Shores">Prairie Shores</option>
+          
+            <option value="Princeton Park">Princeton Park</option>
+          
+            <option value="Rogers Park">Rogers Park</option>
+          
+            <option value="Roscoe Village">Roscoe Village</option>
+          
+            <option value="Roseland">Roseland</option>
+          
+            <option value="Rosemoor">Rosemoor</option>
+          
+            <option value="Scottsdale">Scottsdale</option>
+          
+            <option value="Sheffield Neighbors">Sheffield Neighbors</option>
+          
+            <option value="South Austin">South Austin</option>
+          
+            <option value="South Chicago">South Chicago</option>
+          
+            <option value="South Deering">South Deering</option>
+          
+            <option value="South Loop">South Loop</option>
+          
+            <option value="South Shore">South Shore</option>
+          
+            <option value="The Robert Taylor Homes">The Robert Taylor Homes</option>
+          
+            <option value="Vittum Park">Vittum Park</option>
+          
+            <option value="Washington Park">Washington Park</option>
+          
+            <option value="Wentworth Gardens">Wentworth Gardens</option>
+          
+            <option value="West Chatham">West Chatham</option>
+          
+            <option value="West Chesterfield">West Chesterfield</option>
+          
+            <option value="West Englewood">West Englewood</option>
+          
+            <option value="West Garfield Park">West Garfield Park</option>
+          
+            <option value="West Humboldt Park">West Humboldt Park</option>
+          
+            <option value="West Pullman">West Pullman</option>
+          
+            <option value="West Rogers Park">West Rogers Park</option>
+          
+            <option value="West Town">West Town</option>
+          
+            <option value="West Woodlawn">West Woodlawn</option>
+          
+            <option value="Wicker Park">Wicker Park</option>
+          
+            <option value="Winneconna Parkway">Winneconna Parkway</option>
+          
+            <option value="Wrightwood">Wrightwood</option>
+          
         </select>
       </div>
 
@@ -14,34 +200,6 @@
         <label>Primary cause</label>
         <select data-placeholder="Select primary causes" id="primary_cause" name="primary_causes[]" class="chosen" tabindex=0>
           <option value="">Any</option>
-          
-            <option value="DUI stop">DUI stop</option>
-          
-            <option value="Excessive force">Excessive force</option>
-          
-            <option value="Excessive force-minor">Excessive force-minor</option>
-          
-            <option value="Excessive force-serious">Excessive force-serious</option>
-          
-            <option value="Extended detention">Extended detention</option>
-          
-            <option value="Failure to provide medical care">Failure to provide medical care</option>
-          
-            <option value="False arrest">False arrest</option>
-          
-            <option value="First Amendment violation">First Amendment violation</option>
-          
-            <option value="Illegal search/seizure">Illegal search/seizure</option>
-          
-            <option value="Illinois Domestic Violence Act violation">Illinois Domestic Violence Act violation</option>
-          
-            <option value="Malicious prosecution">Malicious prosecution</option>
-          
-            <option value="Monell (policies and practices)">Monell (policies and practices)</option>
-          
-            <option value="Other police misconduct">Other police misconduct</option>
-          
-            <option value="Reversed conviction">Reversed conviction</option>
           
         </select>
       </div>
@@ -63,95 +221,11 @@
         <div class="form-group tags">
           <label>Type of interaction</label>
              
-              <input type="checkbox" name="tags" id="home-invasion" value="home invasion">
-                <label for="home-invasion" class="option"><span>Home invasion</span></label>
-             
-              <input type="checkbox" name="tags" id="protest" value="protest">
-                <label for="protest" class="option"><span>Protest</span></label>
-             
-              <input type="checkbox" name="tags" id="stop-and-frisk" value="stop and frisk">
-                <label for="stop-and-frisk" class="option"><span>Stop and frisk</span></label>
-             
-              <input type="checkbox" name="tags" id="traffic-stop" value="traffic stop">
-                <label for="traffic-stop" class="option"><span>Traffic stop</span></label>
-             
-              <input type="checkbox" name="tags" id="strip-search" value="strip search">
-                <label for="strip-search" class="option"><span>Strip search</span></label>
-             
-              <input type="checkbox" name="tags" id="lock-up" value="lock-up">
-                <label for="lock-up" class="option"><span>Lock-up</span></label>
-             
 
           <label>Type of weapon</label>
            
-            <input type="checkbox" name="tags" id="nightstick" value="nightstick">
-              <label for="nightstick" class="option"><span>Nightstick</span></label>
-           
-            <input type="checkbox" name="tags" id="pepper-spray" value="pepper spray">
-              <label for="pepper-spray" class="option"><span>Pepper spray</span></label>
-           
-            <input type="checkbox" name="tags" id="taser" value="taser">
-              <label for="taser" class="option"><span>Taser</span></label>
-           
-            <input type="checkbox" name="tags" id="gun" value="gun">
-              <label for="gun" class="option"><span>Gun</span></label>
-           
-            <input type="checkbox" name="tags" id="physical-force" value="physical force">
-              <label for="physical-force" class="option"><span>Physical force</span></label>
-           
-            <input type="checkbox" name="tags" id="hog-tied" value="hog-tied">
-              <label for="hog-tied" class="option"><span>Hog-tied</span></label>
-           
 
           <label>Type of misconduct</label>
-             
-              <input type="checkbox" name="tags" id="false-report" value="false report">
-                <label for="false-report" class="option"><span>False report</span></label>
-             
-              <input type="checkbox" name="tags" id="shooting" value="shooting">
-                <label for="shooting" class="option"><span>Shooting</span></label>
-             
-              <input type="checkbox" name="tags" id="torture" value="torture">
-                <label for="torture" class="option"><span>Torture</span></label>
-             
-              <input type="checkbox" name="tags" id="damage-to-property" value="damage to property">
-                <label for="damage-to-property" class="option"><span>Damage to property</span></label>
-             
-              <input type="checkbox" name="tags" id="racial-epithets" value="racial epithets">
-                <label for="racial-epithets" class="option"><span>Racial epithets</span></label>
-             
-              <input type="checkbox" name="tags" id="legal-access-denied" value="legal access denied">
-                <label for="legal-access-denied" class="option"><span>Legal access denied</span></label>
-             
-              <input type="checkbox" name="tags" id="retaliation" value="retaliation">
-                <label for="retaliation" class="option"><span>Retaliation</span></label>
-             
-              <input type="checkbox" name="tags" id="threats/intimidation" value="threats/intimidation">
-                <label for="threats/intimidation" class="option"><span>Threats/intimidation</span></label>
-             
-              <input type="checkbox" name="tags" id="bribery" value="bribery">
-                <label for="bribery" class="option"><span>Bribery</span></label>
-             
-              <input type="checkbox" name="tags" id="excessive-force" value="excessive force">
-                <label for="excessive-force" class="option"><span>Excessive force</span></label>
-             
-              <input type="checkbox" name="tags" id="destroy/conceal/fabricate-evidence" value="destroy/conceal/fabricate evidence">
-                <label for="destroy/conceal/fabricate-evidence" class="option"><span>Destroy/conceal/fabricate evidence</span></label>
-             
-              <input type="checkbox" name="tags" id="strip-search" value="strip search">
-                <label for="strip-search" class="option"><span>Strip search</span></label>
-             
-              <input type="checkbox" name="tags" id="stolen-property" value="stolen property">
-                <label for="stolen-property" class="option"><span>Stolen property</span></label>
-             
-              <input type="checkbox" name="tags" id="witness-manipulation" value="witness manipulation">
-                <label for="witness-manipulation" class="option"><span>Witness manipulation</span></label>
-             
-              <input type="checkbox" name="tags" id="forced-confession" value="forced confession">
-                <label for="forced-confession" class="option"><span>Forced confession</span></label>
-             
-              <input type="checkbox" name="tags" id="sexual-harassment/abuse" value="sexual harassment/abuse">
-                <label for="sexual-harassment/abuse" class="option"><span>Sexual harassment/abuse</span></label>
              
 
           <label>Plaintiff details</label>
@@ -161,33 +235,6 @@
           
 
           <label>Outcome</label>
-           
-            <input type="checkbox" name="tags" id="weapons-charges" value="weapons charges">
-              <label for="weapons-charges" class="option"><span>Weapons charges</span></label>
-           
-            <input type="checkbox" name="tags" id="hospitalized" value="hospitalized">
-              <label for="hospitalized" class="option"><span>Hospitalized</span></label>
-           
-            <input type="checkbox" name="tags" id="resisting-or-obstructing-arrest-charges" value="resisting or obstructing arrest charges">
-              <label for="resisting-or-obstructing-arrest-charges" class="option"><span>Resisting or obstructing arrest charges</span></label>
-           
-            <input type="checkbox" name="tags" id="other-charges-filed" value="other charges filed">
-              <label for="other-charges-filed" class="option"><span>Other charges filed</span></label>
-           
-            <input type="checkbox" name="tags" id="died-in-custody" value="died in custody">
-              <label for="died-in-custody" class="option"><span>Died in custody</span></label>
-           
-            <input type="checkbox" name="tags" id="drug-charges" value="drug charges">
-              <label for="drug-charges" class="option"><span>Drug charges</span></label>
-           
-            <input type="checkbox" name="tags" id="assault-or-battery-to-an-officer-charges" value="assault or battery to an officer charges">
-              <label for="assault-or-battery-to-an-officer-charges" class="option"><span>Assault or battery to an officer charges</span></label>
-           
-            <input type="checkbox" name="tags" id="killed-by-officer" value="killed by officer">
-              <label for="killed-by-officer" class="option"><span>Killed by officer</span></label>
-           
-            <input type="checkbox" name="tags" id="died-out-of-custody" value="died out of custody">
-              <label for="died-out-of-custody" class="option"><span>Died out of custody</span></label>
            
 
           
