final changes to about page, point slideshow at new google doc

--- a/less/style.less
+++ b/less/style.less
@@ -417,6 +417,10 @@ label {
       text-transform: uppercase;
     }
 
+    &.cap {
+      text-transform: capitalize;
+    }
+
     span {
       white-space: nowrap;
       position: relative;
