--- a/less/style.less
+++ b/less/style.less
@@ -2135,6 +2135,13 @@ body.not-nested {
   }
 }
 
+#muslim+label {
+    text-transform: capitalize;
+}
+.clickable.tag[data-val="muslim"] {
+    text-transform: capitalize;
+}
+
 
 /* ==========================================================================
 Media Queries
