--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -285,39 +285,39 @@
         <select data-placeholder="Select primary causes" id="primary_cause" name="primary_causes[]" class="chosen" tabindex=0>
           <option value="">Any</option>
           
-            <option value="ATTORNEY FEES">ATTORNEY FEES</option>
+            <option value="Attorney fees">Attorney fees</option>
           
-            <option value="CONDITIONS OF CONFINEMENT">CONDITIONS OF CONFINEMENT</option>
+            <option value="Conditions of confinement">Conditions of confinement</option>
           
-            <option value="DUI STOP">DUI STOP</option>
+            <option value="Dui stop">Dui stop</option>
           
-            <option value="EXCESSIVE FORCE">EXCESSIVE FORCE</option>
+            <option value="Excessive force">Excessive force</option>
           
-            <option value="EXCESSIVE FORCE/MINOR">EXCESSIVE FORCE/MINOR</option>
+            <option value="Excessive force/minor">Excessive force/minor</option>
           
-            <option value="EXCESSIVE FORCE/SERIOUS">EXCESSIVE FORCE/SERIOUS</option>
+            <option value="Excessive force/serious">Excessive force/serious</option>
           
-            <option value="EXTENDED DETENTION">EXTENDED DETENTION</option>
+            <option value="Extended detention">Extended detention</option>
           
-            <option value="FAILURE TO PROVIDE MEDICAL CARE">FAILURE TO PROVIDE MEDICAL CARE</option>
+            <option value="Failure to provide medical care">Failure to provide medical care</option>
           
-            <option value="FALSE ARREST">FALSE ARREST</option>
+            <option value="False arrest">False arrest</option>
           
-            <option value="FIRST AMENDMENT VIOLATION">FIRST AMENDMENT VIOLATION</option>
+            <option value="First amendment violation">First amendment violation</option>
           
-            <option value="ILLEGAL SEARCH/SEIZURE">ILLEGAL SEARCH/SEIZURE</option>
+            <option value="Illegal search/seizure">Illegal search/seizure</option>
           
-            <option value="ILLINOIS DOMESTIC VIOLENCE ACT">ILLINOIS DOMESTIC VIOLENCE ACT</option>
+            <option value="Illinois domestic violence act">Illinois domestic violence act</option>
           
-            <option value="MALICIOUS PROSECUTION">MALICIOUS PROSECUTION</option>
+            <option value="Malicious prosecution">Malicious prosecution</option>
           
-            <option value="MONELL">MONELL</option>
+            <option value="Monell">Monell</option>
           
-            <option value="OTHER POLICE MISCONDUCT">OTHER POLICE MISCONDUCT</option>
+            <option value="Other police misconduct">Other police misconduct</option>
           
-            <option value="REVERSED CONVICTION">REVERSED CONVICTION</option>
+            <option value="Reversed conviction">Reversed conviction</option>
           
-            <option value="WRONGFUL DEATH">WRONGFUL DEATH</option>
+            <option value="Wrongful death">Wrongful death</option>
           
         </select>
       </div>
